# depression_anxiety_risk_score

./: .flake8  .gitignore  README.rst  noxfile.py  pyproject.toml  whitelist.txt
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
src/depression_anxiety_risk_scores/: UKBInfoMapper.py  __init__.py  notebook.ipynb  utils.py  utils_preprocessing.py  utils_preprocessing_series.py
src/depression_anxiety_risk_scores/sql/: sql_file.sql
src/sql/: sql_file
tests/: __init__.py  test_depression_anxiety_risk_scores.py  test_main.py
