[tool.poetry]
name = "depression_anxiety_risk_scores"
version = "0.1.0"
description = "This is Depression_Anxiety_Risk_Scores"
authors = ["BASTIEN ORSET <bastien.orset@huma.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
db-dtypes = "^1.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
safety = "^2.3.1"
mypy = "^0.990"
darglint = "^1.8.1"
xdoctest = "^1.1.0"
Sphinx = "^5.3.0"
dlint = "^0.13.0"
Pygments = "^2.13.0"
colorama = "^0.4.6"
nox = "^2022.8.7"
typeguard = "^2.13.3"
pytest-cov = "^4.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.10.27"
flake8-bandit = "^4.1.1"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
flake8-simplify = "^0.19.3"
flake8-spellcheck = "^0.28.0"
flake8-import-order = "^0.18.1"
flake8-functions = "^0.0.7"
flake8-cognitive-complexity = "^0.1.0"
flake8-expression-complexity = "^0.0.11"
sphinx-autodoc-typehints = "^1.19.5"
coverage = {extras = ["toml"], version = "^6.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["depression_anxiety_risk_scores"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.poetry.scripts]
depression_anxiety_risk_scores = "depression_anxiety_risk_scores.main:start"
